--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -205,13 +205,14 @@
   - CommonGloves # WD
   - QuartermasterShoes
   - QuartermasterPDA # WD
+  - CommonCargoJobTrinkets
   - Trinkets
 
 - type: roleLoadout
   id: JobCargoTechnician
   groups:
   - CargoTechnicianHead
-  - CommonCargoEars # WD
+  - CommonCargoHeadset # WD
   - CommonGlasses # WD
   - CargoTechnicianJumpsuit
   - CargoTechnicianBackpack
@@ -219,6 +220,7 @@
   - CommonGloves # WD
   - CargoTechnicianShoes
   - CargoTechnicianPDA
+  - CommonCargoJobTrinkets
   - Trinkets
 
 - type: roleLoadout
