--- a/Resources/Prototypes/Loadouts/Jobs/Justice/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Justice/common.yml
@@ -5,37 +5,42 @@
   equipment: FolderBlack
 - type: startingGear
   id: FolderBlack
-  equipment:
-    id: BoxFolderBlack
+  storage:
+    back:
+    - BoxFolderBlack
 
 - type: itemLoadout # WD
   id: FolderWhite
   equipment: FolderWhite
 - type: startingGear
   id: FolderWhite
-  equipment:
-    id: BoxFolderWhite
+  storage:
+    back:
+    - BoxFolderWhite
 
 - type: itemLoadout # WD
   id: FolderRed
   equipment: FolderRed
 - type: startingGear
   id: FolderRed
-  equipment:
-    id: BoxFolderRed
+  storage:
+    back:
+    - BoxFolderRed
 
 - type: itemLoadout # WD
   id: Clipboard
   equipment: Clipboard
 - type: startingGear
   id: Clipboard
-  equipment:
-    id: BoxFolderClipboard
+  storage:
+    back:
+    - BoxFolderClipboard
 
 - type: itemLoadout # WD
   id: JudgeHammer
   equipment: JudgeHammer
 - type: startingGear
   id: JudgeHammer
-  equipment:
-    id: OmntnsHammer
+  storage:
+    back:
+    - OmntnsHammer
