--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -260,6 +260,7 @@
   - type: CharacterInformation
   - type: Penetrated
   - type: Mood
+  - type: OfferItem # WD-EDIT
 
 - type: entity
   save: false
