--- a/Resources/keybinds.yml
+++ b/Resources/keybinds.yml
@@ -258,6 +258,9 @@ binds:
   type: State
   key: V
   mod1: Shift
+- function: OfferItem
+  type: State
+  key: F
 - function: ShowDebugConsole
   type: State
   key: Tilde
