Physics Based Air Throws (#342)
I've made it so that when a room is explosively depressurized(or when a
body of high pressure air flows into one of lower pressure air), that
entities inside are launched by the air pressure with effects according
to their mass. An entity's mass is now used as an innate resistance to
forced movement by airflow, and more massive entities are both less
likely to be launched, and will launch less far than others. While
lighter entities are launched far more easily, and will shoot off into
space quite quickly! Spacing departments has never been so exciting!
This can be made extraordinarily fun if more objects are given the
ability to injure people when colliding with them at high speeds.

As a note, Humans are very unlikely to be sucked into space at a typical
force generated from a 101kpa room venting into 0kpa, unless they
happened to be standing right next to the opening to space when it was
created. The same cannot be said for "Lighter-Than-Human" species such
as Felinids and Harpies. I guess that's just the price to pay for being
cute. :)

On a plus side, because the math behind this is simplified even further
than it was before, this actually runs more efficiently than the
previous system.

Nothing, this is basically done. I've spent a good 6 hours straight
finely tuning the system until I was satisfied that it reflects
something close to reality.

**Before the Space Wind Rework:**

https://github.com/Simple-Station/Einstein-Engines/assets/16548818/0bf56c50-58e6-4aef-97f8-027fbe62331e

**With this Rework:**

https://github.com/Simple-Station/Einstein-Engines/assets/16548818/6be507a9-e9de-4bb8-9d46-8b7c83ed5f1d

:cl: VMSolidus
- add: Atmospheric "Throws" are now calculated using object mass, and
behave accordingly. Tiny objects will shoot out of rooms quite fast!

---------

Signed-off-by: VMSolidus <evilexecutive@gmail.com>
Co-authored-by: DEATHB4DEFEAT <77995199+DEATHB4DEFEAT@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -22,7 +22,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.25
-        density: 10
+        density: 0.8
         mask:
         - FlyingMobMask
         layer:
@@ -89,7 +89,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.1
-        density: 30
+        density: 0.1
         mask:
         - FlyingMobMask
         layer:
@@ -325,7 +325,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.2
-        density: 100
+        density: 0.0007
         mask:
         - SmallMobMask
         layer:
@@ -428,7 +428,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.2
-        density: 120
+        density: 0.007
         mask:
         - SmallMobMask
         layer:
@@ -1518,7 +1518,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.2
-        density: 100
+        density: 0.76
         mask:
         - SmallMobMask
         layer:
@@ -2450,7 +2450,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 50 #They actually are pretty light, I looked it up
+        density: 16.66
         mask:
         - MobMask
         layer:
@@ -2527,7 +2527,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 50
+        density: 25.5
         mask:
         - MobMask
         layer:
@@ -2676,7 +2676,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 15
+        density: 9
         mask:
         - MobMask
         layer:
@@ -2822,6 +2822,17 @@
         Base: caracal_flop
       Dead:
         Base: caracal_dead
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 30
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
 
 - type: entity
   name: kitten
@@ -2855,6 +2866,17 @@
     thresholds:
       0: Alive
       25: Dead
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 2
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
 
 - type: entity
   name: sloth
@@ -2935,7 +2957,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 5
+        density: 4
         mask:
         - MobMask
         layer:
@@ -3012,7 +3034,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.2
-        density: 120
+        density: 0.8
         mask:
         - SmallMobMask
         layer:
@@ -3134,7 +3156,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 250
+        density: 750
         mask:
         - MobMask
         layer:
@@ -3219,7 +3241,7 @@
         shape:
           !type:PhysShapeCircle
           radius: 0.35
-        density: 100 # High, because wood is heavy.
+        density: 15
         mask:
         - MobMask
         layer:
