--- a/Resources/Prototypes/Tiles/floors.yml
+++ b/Resources/Prototypes/Tiles/floors.yml
@@ -15,6 +15,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelCheckerLight
@@ -33,6 +34,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteelCheckerLight
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelCheckerDark
@@ -51,6 +53,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteelCheckerDark
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelMini
@@ -69,6 +72,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelPavement
@@ -87,6 +91,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelDiagonal
@@ -105,6 +110,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelOffset
@@ -117,6 +123,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelMono
@@ -135,6 +142,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelPavementVertical
@@ -153,6 +161,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelHerringbone
@@ -171,6 +180,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorSteelDiagonalMini
@@ -189,6 +199,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorBrassFilled
@@ -201,7 +212,8 @@
     collection: FootstepHull
   itemDrop: FloorTileItemBrassFilled
   heatCapacity: 10000
-  
+  tileRipResistance: 220
+
 - type: tile
   id: FloorBrassReebe
   name: tiles-brass-floor-reebe
@@ -213,6 +225,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemBrassReebe
   heatCapacity: 10000
+  tileRipResistance: 220
 
 - type: tile
   id: FloorPlastic
@@ -231,6 +244,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWood
@@ -251,6 +265,7 @@
     collection: BarestepWood
   itemDrop: FloorTileItemWood
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhite
@@ -269,6 +284,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteMini
@@ -287,6 +303,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhitePavement
@@ -305,6 +322,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteDiagonal
@@ -323,6 +341,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteOffset
@@ -335,6 +354,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteMono
@@ -353,6 +373,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhitePavementVertical
@@ -371,6 +392,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteHerringbone
@@ -389,6 +411,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhiteDiagonalMini
@@ -407,6 +430,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorWhitePlastic
@@ -425,6 +449,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemWhite
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorDark
@@ -443,6 +468,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkMini
@@ -461,6 +487,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkPavement
@@ -479,6 +506,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkDiagonal
@@ -497,6 +525,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkOffset
@@ -509,6 +538,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkMono
@@ -527,6 +557,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkPavementVertical
@@ -545,6 +576,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkHerringbone
@@ -563,6 +595,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkDiagonalMini
@@ -581,6 +614,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorDarkPlastic
@@ -599,6 +633,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemDark
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorTechMaint
@@ -611,6 +646,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemTechmaint
   heatCapacity: 10000
+  tileRipResistance: 250
 
 - type: tile
   id: FloorReinforced
@@ -623,6 +659,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemReinforced
   heatCapacity: 10000
+  reinforced: true
 
 - type: tile
   id: FloorMono
@@ -635,6 +672,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemMono
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorLino
@@ -647,6 +685,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemLino
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorSteelDirty
@@ -659,6 +698,7 @@
     collection: FootstepPlating
   itemDrop: FloorTileItemDirty
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorElevatorShaft
@@ -671,6 +711,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemElevatorShaft
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorMetalDiamond
@@ -683,6 +724,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemMetalDiamond
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorRockVault
@@ -695,6 +737,7 @@
     collection: FootstepAsteroid
   itemDrop: FloorTileItemRockVault
   heatCapacity: 10000
+  tileRipResistance:  400
 
 - type: tile
   id: FloorBlue
@@ -707,6 +750,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemBlue
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorSteelLime
@@ -725,6 +769,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemLime
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorMining
@@ -737,6 +782,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemMining
   heatCapacity: 10000
+  tileRipResistance: 250
 
 - type: tile
   id: FloorMiningDark
@@ -749,6 +795,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemMiningDark
   heatCapacity: 10000
+  tileRipResistance: 250
 
 - type: tile
   id: FloorMiningLight
@@ -761,6 +808,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemMiningLight
   heatCapacity: 10000
+  tileRipResistance: 250
 
 # Departamental
 - type: tile
@@ -774,6 +822,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemFreezer
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorShowroom
@@ -792,6 +841,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShowroom
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorHydro
@@ -804,6 +854,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemHydro
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorBar
@@ -822,6 +873,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemBar
   heatCapacity: 10000
+  tileRipResistance: 100
 
 - type: tile
   id: FloorClown
@@ -834,6 +886,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemClown
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorMime
@@ -846,6 +899,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemMime
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorKitchen
@@ -858,6 +912,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemKitchen
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorLaundry
@@ -870,6 +925,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemLaundry
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorSteelDamaged
@@ -889,6 +945,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel #This should probably be made null when it becomes possible to make it such, in SS13 prying destroyed tiles wouldn't give you anything.
   heatCapacity: 10000
+  tileRipResistance: 175
 
 - type: tile
   id: FloorSteelBurnt
@@ -905,6 +962,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemSteel #Same case as FloorSteelDamaged, make it null when possible
   heatCapacity: 10000
+  tileRipResistance: 175
 
 
 # Concrete
@@ -926,6 +984,7 @@
   itemDrop: FloorTileItemConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorConcreteMono
@@ -945,6 +1004,7 @@
   itemDrop: FloorTileItemConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorConcreteSmooth
@@ -964,6 +1024,7 @@
   itemDrop: FloorTileItemConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorGrayConcrete
@@ -983,6 +1044,7 @@
   itemDrop: FloorTileItemGrayConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorGrayConcreteMono
@@ -1002,6 +1064,7 @@
   itemDrop: FloorTileItemGrayConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorGrayConcreteSmooth
@@ -1021,6 +1084,7 @@
   itemDrop: FloorTileItemGrayConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorOldConcrete
@@ -1040,6 +1104,7 @@
   itemDrop: FloorTileItemOldConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorOldConcreteMono
@@ -1059,6 +1124,7 @@
   itemDrop: FloorTileItemOldConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 - type: tile
   id: FloorOldConcreteSmooth
@@ -1078,6 +1144,7 @@
   itemDrop: FloorTileItemOldConcrete
   heatCapacity: 10000
   weather: true
+  tileRipResistance: 300
 
 # Carpets (non smoothing)
 - type: tile
@@ -1094,6 +1161,7 @@
   friction: 0.25
   itemDrop: FloorTileItemArcadeBlue
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorArcadeBlue2
@@ -1109,6 +1177,7 @@
   friction: 0.25
   itemDrop: FloorTileItemArcadeBlue2
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorArcadeRed
@@ -1124,6 +1193,7 @@
   friction: 0.25
   itemDrop: FloorTileItemArcadeRed
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorEighties
@@ -1139,6 +1209,7 @@
   friction: 0.25
   itemDrop: FloorTileItemEighties
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorCarpetClown
@@ -1154,6 +1225,7 @@
   friction: 0.25
   itemDrop: FloorTileItemCarpetClown
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorCarpetOffice
@@ -1169,6 +1241,7 @@
   friction: 0.25
   itemDrop: FloorTileItemCarpetOffice
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorBoxing
@@ -1188,6 +1261,7 @@
   friction: 0.25
   itemDrop: FloorTileItemBoxing
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorGym
@@ -1207,6 +1281,7 @@
   friction: 0.25
   itemDrop: FloorTileItemGym
   heatCapacity: 10000
+  tileRipResistance: 50
 
 # Shuttle
 - type: tile
@@ -1225,6 +1300,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleWhite
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttleGrey
@@ -1243,6 +1319,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleGrey
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttleBlack
@@ -1261,6 +1338,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleBlack
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttleBlue
@@ -1278,6 +1356,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleBlue
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttleOrange
@@ -1295,6 +1374,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleOrange
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttlePurple
@@ -1312,6 +1392,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttlePurple
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 - type: tile
   id: FloorShuttleRed
@@ -1329,6 +1410,7 @@
     collection: FootstepFloor
   itemDrop: FloorTileItemShuttleRed
   heatCapacity: 10000
+  tileRipResistance: 4500
 
 
 # Materials
@@ -1343,6 +1425,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemGold
   heatCapacity: 10000
+  tileRipResistance: 600
 
 - type: tile
   id: FloorSilver
@@ -1355,6 +1438,7 @@
     collection: FootstepTile
   itemDrop: FloorTileItemSilver
   heatCapacity: 10000
+  tileRipResistance: 500
 
 - type: tile
   id: FloorGlass
@@ -1367,6 +1451,7 @@
     collection: FootstepTile
   itemDrop: SheetGlass1
   heatCapacity: 10000
+  tileRipResistance: 150
 
 - type: tile
   id: FloorRGlass
@@ -1385,6 +1470,7 @@
     collection: FootstepTile
   itemDrop: SheetRGlass1
   heatCapacity: 10000
+  tileRipResistance: 175
 
 # Circuits
 - type: tile
@@ -1398,6 +1484,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemGCircuit
   heatCapacity: 10000
+  tileRipResistance: 225
 
 - type: tile
   id: FloorBlueCircuit
@@ -1410,6 +1497,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemBCircuit
   heatCapacity: 10000
+  tileRipResistance: 225
 
 # Terrain
 - type: tile
@@ -1695,6 +1783,7 @@
   itemDrop: FloorTileItemFlesh
   friction: 0.05 #slippy
   heatCapacity: 10000
+  tileRipResistance: 80
 
 - type: tile
   id: FloorTechMaint2
@@ -1707,6 +1796,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemSteelMaint
   heatCapacity: 10000
+  tileRipResistance: 225
 
 - type: tile
   id: FloorTechMaint3
@@ -1725,6 +1815,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemGratingMaint
   heatCapacity: 10000
+  tileRipResistance: 225
 
 - type: tile
   id: FloorWoodTile
@@ -1745,6 +1836,7 @@
     collection: BarestepWood
   itemDrop: FloorTileItemWoodPattern
   heatCapacity: 10000
+  tileRipResistance: 75
 
 - type: tile
   id: FloorBrokenWood
@@ -1768,6 +1860,7 @@
     collection: BarestepWood
   itemDrop: MaterialWoodPlank1
   heatCapacity: 10000
+  tileRipResistance: 60
 
 - type: tile
   id: FloorWebTile
@@ -1782,6 +1875,7 @@
     collection: BarestepCarpet
   itemDrop: FloorTileItemWeb
   heatCapacity: 10000
+  tileRipResistance: 30
 
 - type: tile
   id: FloorChromite
@@ -1813,6 +1907,7 @@
     collection: FootstepHull
   itemDrop: FloorTileItemSteel #probably should not be normally obtainable, but the game shits itself and dies when you try to put null here
   heatCapacity: 10000
+  tileRipResistance: 500
 
 - type: tile
   id: FloorHullReinforced
@@ -1825,6 +1920,7 @@
   itemDrop: FloorTileItemSteel
   heatCapacity: 100000 #/tg/ has this set as "INFINITY." I don't know if that exists here so I've just added an extra 0
   indestructible: true
+  reinforced: true
 
 - type: tile
   id: FloorReinforcedHardened
@@ -1835,6 +1931,7 @@
   footstepSounds:
     collection: FootstepHull
   itemDrop: FloorTileItemReinforced #same case as FloorHull
+  reinforced: true
 
 # Faux sci tiles
 
@@ -1866,6 +1963,7 @@
     collection: FootstepGrass
   itemDrop: FloorTileItemAstroGrass
   heatCapacity: 10000
+  tileRipResistance: 50
 
 - type: tile
   id: FloorMowedAstroGrass
@@ -1875,6 +1973,7 @@
   isSubfloor: false
   deconstructTools: [ Cutting ]
   itemDrop: FloorTileItemMowedAstroGrass
+  tileRipResistance: 50
 
 - type: tile
   id: FloorJungleAstroGrass
@@ -1884,6 +1983,7 @@
   isSubfloor: false
   deconstructTools: [ Cutting ]
   itemDrop: FloorTileItemJungleAstroGrass
+  tileRipResistance: 50
 
 # Ice
 - type: tile
@@ -1899,6 +1999,7 @@
   mobFrictionNoInput: 0.05
   mobAcceleration: 2
   itemDrop: FloorTileItemAstroIce
+  tileRipResistance: 50
 
 - type: tile
   id: FloorAstroSnow
@@ -1908,6 +2009,7 @@
   isSubfloor: false
   deconstructTools: [ Prying ]
   itemDrop: FloorTileItemAstroSnow
+  tileRipResistance: 50
 
 - type: tile
   id: FloorWoodLarge
@@ -1928,3 +2030,4 @@
     collection: BarestepWood
   itemDrop: FloorTileItemWoodLarge
   heatCapacity: 10000
+  tileRipResistance: 100
