--- a/Resources/Prototypes/Roles/Jobs/Civilian/assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/assistant.yml
@@ -3,7 +3,6 @@
   name: job-name-passenger
   description: job-description-passenger
   playTimeTracker: JobPassenger
-  startingGear: PassengerGear
   icon: "JobIconPassenger"
   supervisors: job-supervisors-everyone
   access:
@@ -11,3 +10,9 @@
 
 - type: startingGear
   id: PassengerGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitColorGrey
+    back: ClothingBackpackFilled
+    shoes: ClothingShoesColorBlack
+    id: PassengerPDA
+    ears: ClothingHeadsetGrey
