--- a/Resources/Prototypes/Roles/Jobs/Fun/cult_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/cult_startinggear.yml
@@ -1,21 +1,15 @@
 #Cult outfit startingGear definitions.
-- type: startingGear
-  id: CultLeaderGear
-  equipment:
-    jumpsuit: ClothingUniformJumpsuitColorBlack
-    back: ClothingBackpackFilled
-    head: ClothingHeadHelmetCult
-    neck: BedsheetCult
-    outerClothing: ClothingOuterArmorCult
-    shoes: ClothingShoesCult
-    id: PassengerPDA
-    ears: ClothingHeadsetService
-    underwearb: ClothingUnderwearBottomBoxersWhite # White-Underwear
-  underweart: ClothingUnderwearTopBraWhite # White-Underwear
-  underwearb: ClothingUnderwearBottomPantiesWhite # White-Underwear
-  innerClothingSkirt: ClothingUniformJumpskirtColorBlack
-  satchel: ClothingBackpackSatchelFilled
-  duffelbag: ClothingBackpackDuffelFilled
+
+# - type: startingGear
+#   id: CultLeaderGear
 
 - type: startingGear
   id: CultistGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitColorBlack
+    back: ClothingBackpackFilled
+    head: ClothingHeadHatHoodCulthood
+    outerClothing: ClothingOuterRobesCult
+    shoes: ClothingShoesColorRed
+    id: PassengerPDA
+    ears: ClothingHeadsetService
