--- a/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
@@ -8,7 +8,6 @@
       department: Science
       time: 54000 #15 hrs
       inverted: true # stop playing intern if you're good at science!
-  startingGear: ResearchAssistantGear
   icon: "JobIconResearchAssistant"
   supervisors: job-supervisors-science
   canBeAntag: true
@@ -18,3 +17,10 @@
 
 - type: startingGear
   id: ResearchAssistantGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitColorWhite
+    back: ClothingBackpackScienceFilled
+    shoes: ClothingShoesColorWhite
+    id: ResearchAssistantPDA
+    ears: ClothingHeadsetScience
+    pocket1: BookScientistsGuidebook
