--- a/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
@@ -10,7 +10,6 @@
       department: Security
       time: 54000 #15 hrs
       inverted: true # stop playing intern if you're good at security!
-  startingGear: SecurityCadetGear
   icon: "JobIconSecurityCadet"
   supervisors: job-supervisors-security
   whitelistedSpecies:
@@ -29,3 +28,10 @@
 
 - type: startingGear
   id: SecurityCadetGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitColorRed
+    back: ClothingBackpackSecurityFilled
+    shoes: ClothingShoesBootsCombatFilled
+    id: SecurityCadetPDA
+    ears: ClothingHeadsetSecurity
+    pocket1: BookSecurity
