--- a/Resources/Prototypes/Roles/Jobs/Civilian/bartender.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/bartender.yml
@@ -7,7 +7,6 @@
     - !type:DepartmentTimeRequirement
       department: Civilian
       time: 1800
-  startingGear: BartenderGear
   icon: "JobIconBartender"
   supervisors: job-supervisors-hop
   access:
@@ -20,3 +19,9 @@
 
 - type: startingGear
   id: BartenderGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitBartender
+    back: ClothingBackpackFilled
+    shoes: ClothingShoesColorBlack
+    id: BartenderPDA
+    ears: ClothingHeadsetService
