--- a/Resources/Prototypes/Roles/Jobs/Civilian/botanist.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/botanist.yml
@@ -3,7 +3,6 @@
   name: job-name-botanist
   description: job-description-botanist
   playTimeTracker: JobBotanist
-  startingGear: BotanistGear
   icon: "JobIconBotanist"
   supervisors: job-supervisors-hop
   access:
@@ -16,3 +15,9 @@
 
 - type: startingGear
   id: BotanistGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitHydroponics
+    back: ClothingBackpackHydroponicsFilled
+    shoes: ClothingShoesColorBrown
+    id: BotanistPDA
+    ears: ClothingHeadsetService
