--- a/Resources/Prototypes/Roles/Jobs/Civilian/chaplain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/chaplain.yml
@@ -3,7 +3,9 @@
   name: job-name-chaplain
   description: job-description-chaplain
   playTimeTracker: JobChaplain
-  startingGear: ChaplainGear
+  requirements:
+    - !type:OverallPlaytimeRequirement
+      time: 18000 #5 hrs
   icon: "JobIconChaplain"
   supervisors: job-supervisors-hop
   access:
@@ -16,3 +18,10 @@
 
 - type: startingGear
   id: ChaplainGear
+  equipment:
+     neck: ClothingNeckNecklaceSilver
+     jumpsuit: ClothingUniformJumpsuitChaplain
+     back: ClothingBackpackChaplainFilled
+     shoes: ClothingShoesColorBlack
+     id: ChaplainPDA
+     ears: ClothingHeadsetService
