--- a/Resources/Prototypes/Roles/Jobs/Civilian/musician.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/musician.yml
@@ -3,7 +3,6 @@
   name: job-name-musician
   description: job-description-musician
   playTimeTracker: JobMusician
-  startingGear: MusicianGear
   icon: "JobIconMusician"
   supervisors: job-supervisors-hire
   access:
@@ -16,3 +15,9 @@
 
 - type: startingGear
   id: MusicianGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitMusician
+    back: ClothingBackpackMusicianFilled
+    shoes: ClothingShoesBootsLaceup
+    id: MusicianPDA
+    ears: ClothingHeadsetService
