--- a/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
@@ -7,7 +7,6 @@
     - !type:DepartmentTimeRequirement
       department: Engineering
       time: 54000 # 15 hrs
-  startingGear: AtmosphericTechnicianGear
   icon: "JobIconAtmosphericTechnician"
   supervisors: job-supervisors-ce
   canBeAntag: true
@@ -19,3 +18,9 @@
 
 - type: startingGear
   id: AtmosphericTechnicianGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitAtmos
+    back: ClothingBackpackAtmosphericsFilled
+    shoes: ClothingShoesColorWhite
+    id: AtmosPDA
+    ears: ClothingHeadsetEngineering
