--- a/Resources/Prototypes/Roles/Jobs/Engineering/senior_engineer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/senior_engineer.yml
@@ -13,7 +13,6 @@
     - !type:DepartmentTimeRequirement
       department: Engineering
       time: 216000 # 60 hrs
-  startingGear: SeniorEngineerGear
   icon: "JobIconSeniorEngineer"
   supervisors: job-supervisors-ce
   canBeAntag: false
@@ -28,3 +27,9 @@
 
 - type: startingGear
   id: SeniorEngineerGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitSeniorEngineer
+    back: ClothingBackpackEngineeringFilled
+    shoes: ClothingShoesBootsMag
+    id: SeniorEngineerPDA
+    ears: ClothingHeadsetEngineering
