--- a/Resources/Prototypes/Roles/Jobs/Engineering/station_engineer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/station_engineer.yml
@@ -7,7 +7,6 @@
     - !type:DepartmentTimeRequirement
       department: Engineering
       time: 14400 #4 hrs
-  startingGear: StationEngineerGear
   icon: "JobIconStationEngineer"
   supervisors: job-supervisors-ce
   access:
@@ -19,3 +18,9 @@
 
 - type: startingGear
   id: StationEngineerGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitEngineering
+    back: ClothingBackpackEngineeringFilled
+    shoes: ClothingShoesBootsWork
+    id: EngineerPDA
+    ears: ClothingHeadsetEngineering
