--- a/Resources/Prototypes/Roles/Jobs/Science/scientist.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/scientist.yml
@@ -7,7 +7,6 @@
     - !type:DepartmentTimeRequirement
       department: Science
       time: 14400 #4 hrs
-  startingGear: ScientistGear
   icon: "JobIconScientist"
   supervisors: job-supervisors-rd
   access:
@@ -16,3 +15,9 @@
 
 - type: startingGear
   id: ScientistGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitScientist
+    back: ClothingBackpackScienceFilled
+    shoes: ClothingShoesColorWhite
+    id: SciencePDA
+    ears: ClothingHeadsetScience
