--- a/Resources/Prototypes/Roles/Jobs/Science/senior_researcher.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/senior_researcher.yml
@@ -7,7 +7,6 @@
     - !type:DepartmentTimeRequirement
       department: Science
       time: 216000 #60 hrs
-  startingGear: SeniorResearcherGear
   icon: "JobIconSeniorResearcher"
   supervisors: job-supervisors-rd
   canBeAntag: false
@@ -20,3 +19,9 @@
 
 - type: startingGear
   id: SeniorResearcherGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitSeniorResearcher
+    back: ClothingBackpackScienceFilled
+    shoes: ClothingShoesColorBlack
+    id: SeniorResearcherPDA
+    ears: ClothingHeadsetScience
