--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -13,7 +13,6 @@
     - !type:OverallPlaytimeRequirement
       time: 108000
   weight: 10
-  startingGear: HoSGear
   icon: "JobIconHeadOfSecurity"
   requireAdminNotify: true
   arrivalNotificationPrototype: HeadOfSecurityArrivalNotification
@@ -41,3 +40,9 @@
 
 - type: startingGear
   id: HoSGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitHoS
+    back: ClothingBackpackHOSFilled
+    shoes: ClothingShoesBootsCombatFilled
+    id: HoSPDA
+    ears: ClothingHeadsetAltSecurity
