- tweak: Jani tweaks.

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -248,6 +248,7 @@
         - WetFloorSign
         - HolosignProjector
         - Plunger
+        - Bucket
       components:
         - LightReplacer
         - SmokeOnTrigger
