--- a/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
@@ -67,6 +67,9 @@
     - type: Item
       size: Large
       sprite: Objects/Specific/Janitorial/advmop.rsi
+      storedRotation: -135
+      shape:
+      - 0, 0, 3, 0
     - type: Absorbent
       pickupAmount: 100
     - type: UseDelay
