- fix: Wizard teleport.

--- a/Resources/Prototypes/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/Entities/Stations/nanotrasen.yml
@@ -26,6 +26,7 @@
     - BaseStationAllEventsEligible
     - BaseStationNanotrasen
     - BaseRandomStation
+    - BaseStationTeleportLocation
   noSpawn: true
   components:
     - type: Transform
