--- a/Resources/Prototypes/Entities/Markers/Spawners/techspawner.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/techspawner.yml
@@ -601,6 +601,7 @@
         - ExGrenade
         - SyndieMiniBomb
         - ClothingEyesNightVisionGogglesSyndie
+        - ClothingEyesGlassesThermalSyndie
         - ClothingOuterVestWeb
         - ClothingBackpackChameleonFill
         - CigPackSyndicate
