--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -343,6 +343,7 @@
       - FauxTileAstroSnow
       - OreBagOfHolding
       - ClothingEyesNightVisionGoggles # WD EDIT
+      - ClothingEyesGlassesThermal # WD EDIT
       - KitchenKnife # WD EDIT
       - ButchCleaver # WD EDIT
       - WeaponTempGun # WD EDIT
