--- a/Resources/Prototypes/_White/Catalog/uplink.yml
+++ b/Resources/Prototypes/_White/Catalog/uplink.yml
@@ -135,6 +135,38 @@
       tags:
       - NukeOpsUplink
 
+- type: listing
+  id: UplinkThermalGoggles
+  name: uplink-thermal-vision-name
+  description: uplink-thermal-vision-desc
+  productEntity: ClothingEyesGlassesThermalSyndie
+  icon: { sprite: Clothing/Eyes/Glasses/thermal.rsi, state: icon }
+  cost:
+    Telecrystal: 3
+  categories:
+  - UplinkWearables
+  conditions:
+  - !type:StoreWhitelistCondition
+    blacklist:
+      tags:
+      - NukeOpsUplink
+
+- type: listing
+  id: UplinkThermalGogglesNukie
+  name: uplink-thermal-vision-name
+  description: uplink-thermal-vision-desc
+  productEntity: ClothingEyesGlassesThermalNukie
+  icon: { sprite: Clothing/Eyes/Glasses/thermal.rsi, state: icon }
+  cost:
+    Telecrystal: 3
+  categories:
+  - UplinkWearables
+  conditions:
+  - !type:StoreWhitelistCondition
+    whitelist:
+      tags:
+      - NukeOpsUplink
+
 #- type: listing
 #  id: UplinkBattleAxe
 #  name: Энергетической боевой топор
