--- a/Resources/Prototypes/_White/Research/experimental.yml
+++ b/Resources/Prototypes/_White/Research/experimental.yml
@@ -10,3 +10,15 @@
   cost: 10000
   recipeUnlocks:
   - ClothingEyesNightVisionGoggles
+
+- type: technology
+  id: ThermalVisionTech
+  name: research-technology-thermal-vision
+  icon:
+    sprite: Clothing/Eyes/Glasses/thermal.rsi
+    state: icon
+  discipline: Experimental
+  tier: 2
+  cost: 10000
+  recipeUnlocks:
+  - ClothingEyesGlassesThermal
