--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -235,11 +235,30 @@
     sprite: Clothing/Eyes/Glasses/thermal.rsi
   - type: Clothing
     sprite: Clothing/Eyes/Glasses/thermal.rsi
-  - type: Armor
-    modifiers:
-      coefficients:
-        Heat: 0.95
-  - type: GroupExamine
+  - type: ClothingGrantComponent
+    component:
+    - type: ThermalVision
+
+- type: entity
+  parent: ClothingEyesGlassesThermal
+  id: ClothingEyesGlassesThermalSyndie
+  suffix: "Хамелеон"
+  components:
+  - type: ChameleonClothing
+    slot: [ eyes ]
+    default: ClothingEyesGlassesSunglasses
+  - type: UserInterface
+    interfaces:
+    - key: enum.ChameleonUiKey.Key
+      type: ChameleonBoundUserInterface
+
+- type: entity
+  parent: ClothingEyesGlassesThermalSyndie
+  id: ClothingEyesGlassesThermalNukie
+  suffix: "Хамелеон, Ядерные Оперативники"
+  components:
+  - type: ShowSyndicateIcons
+  - type: ShowSecurityIcons
 
 - type: entity
   parent: ClothingEyesBase
