--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -798,6 +798,7 @@
   - type: ClothingGrantComponent
     component:
     - type: NightVision
+    - type: ThermalVision
 
 #MISC. HARDSUITS
 #Clown Hardsuit
