--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -66,7 +66,8 @@
   - type: Sprite
     sprite: Objects/Weapons/Grenades/flashbang.rsi
   - type: FlashOnTrigger
-    range: 7
+    range: 5
+    forceStun: true # WD
   - type: SoundOnTrigger
     sound:
       path: "/Audio/Effects/flash_bang.ogg"
@@ -350,7 +351,7 @@
   parent: GrenadeBase
   id: SmokeGrenade
   name: smoke grenade
-  description: A tactical grenade that releases a large, long-lasting cloud of smoke when used. 
+  description: A tactical grenade that releases a large, long-lasting cloud of smoke when used.
   components:
   - type: Sprite
     sprite: Objects/Weapons/Grenades/smoke.rsi
