--- a/Resources/Prototypes/Roles/Jobs/Security/senior_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/senior_officer.yml
@@ -39,4 +39,4 @@
     back: ClothingBackpackSecurityFilled
     shoes: ClothingShoesBootsCombatFilled
     id: SeniorOfficerPDA
-    ears: ClothingHeadsetSecurity
+    ears: ClothingHeadsetAltSecurity
