flash size and charges tweak

--- a/Resources/Prototypes/Entities/Objects/Weapons/security.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/security.yml
@@ -138,8 +138,8 @@
         shader: unshaded
     - type: Flash
     - type: LimitedCharges
-      maxCharges: 5
-      charges: 5
+      maxCharges: 7
+      charges: 7
     - type: MeleeWeapon
       canHeavyAttack: false
       wideAnimationRotation: 180
@@ -148,7 +148,7 @@
           Blunt: 0 # melee weapon to allow flashing individual targets
       angle: 10
     - type: Item
-      size: Small
+      size: Tiny
       sprite: Objects/Weapons/Melee/flash.rsi
     - type: UseDelay
     - type: StaticPrice
