night and thermal vision tweaks

--- a/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/tome_craft.yml
@@ -41,7 +41,8 @@
       component:
       - type: NightVision
         toggleAction: null
-        toggleSound: null
+        activateSound: null
+        deactivateSound: null
         color: White
     - type: ShowHealthBars
       damageContainers:
