some size tweaks

--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cans.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cans.yml
@@ -4,6 +4,8 @@
   id: DrinkCanBaseFull
   abstract: true
   components:
+  - type: Item
+    size: Tiny
   - type: Drink
   - type: Openable
   - type: Shakeable
