--- a/Resources/Prototypes/Entities/Clothing/Ears/headsets_alt.yml
+++ b/Resources/Prototypes/Entities/Clothing/Ears/headsets_alt.yml
@@ -9,7 +9,9 @@
     state: icon_alt
   - type: Clothing
     equippedPrefix: alt
-  - type: FlashSoundSuppression # WD
+  - type: ClothingGrantComponent # WD
+    component:
+    - type: FlashSoundSuppression
 
 - type: entity
   parent: ClothingHeadsetAlt
